testsuite/tests/typecheck/should_fail/T8262.hs
{-# LANGUAGE MagicHash #-}

module T8262 where

foo x = Just (1#)
