testsuite/tests/typecheck/should_fail/T8262.stderr

T8262.hs:5:15: error:
    • Couldn't match a lifted type with an unlifted type
      When matching the kind of ‘Int#’
    • In the first argument of ‘Just’, namely ‘(1#)’
      In the expression: Just (1#)
      In an equation for ‘foo’: foo x = Just (1#)
